--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <ol>
         <li><a href="hamburger-button/index.html">Hamburger Button</a></li>
         <li><a href="toast-notification/index.html">Toast Notification</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="auto-write-text/index.html">Auto Write Text</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
