--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="hamburger-button/index.html">Hamburger Button</a></li>
         <li><a href="toast-notification/index.html">Toast Notification</a></li>
         <li><a href="auto-write-text/index.html">Auto Write Text</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="pop-up/index.html">Pop Up</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
