Add link for background-changer page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li><a href="auto-write-text/index.html">Auto Write Text</a></li>
         <li><a href="pop-up/index.html">Pop Up</a></li>
         <li><a href="heart-rain/index.html">Heart Rain</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="background-changer/index.html">Background Changer</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
