Add link for dark-mode page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li><a href="pop-up/index.html">Pop Up</a></li>
         <li><a href="heart-rain/index.html">Heart Rain</a></li>
         <li><a href="background-changer/index.html">Background Changer</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="dark-mode/index.html">Dark Mode</a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
         <li><a href="#"></a></li>
