Add class dummy-image at line 15

--- a/carousel/index.html
+++ b/carousel/index.html
@@ -12,10 +12,10 @@
     <div class="carousel">
         <div class="image-container"> 
             <!-- using first image just to make my carousel work for now, later have to apply some good logic -->
-            <img class="carousel-image c-image-1" src="images/company.jpg" alt="company image">
-            <img class="carousel-image c-image-2" src="images/company01.jpg" alt="company image 2">
-            <img class="carousel-image c-image-3" src="images/company02.jpg" alt="comapny image 3">
-            <img class="carousel-image c-image-4" src="images/company03.jpg" alt="company image 4">
+            <img class="carousel-image dummy-image" src="images/company.jpg" alt="company image">
+            <img class="carousel-image " src="images/company01.jpg" alt="company image 2">
+            <img class="carousel-image " src="images/company02.jpg" alt="comapny image 3">
+            <img class="carousel-image " src="images/company03.jpg" alt="company image 4">
         </div>
     </div>
 
