Add link text for sound board

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><a href="background-changer/index.html">Background Changer</a></li>
         <li><a href="dark-mode/index.html">Dark Mode</a></li>
         <li><a href="carousel/index.html">Carousel</a></li>
-        <li><a href="sound-board/index.html"></a></li>
+        <li><a href="sound-board/index.html">Sound Board</a></li>
         <li><a href="#"></a></li>
     </ol>
 </body>
