Add link for zoom effect project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <li><a href="dark-mode/index.html">Dark Mode</a></li>
         <li><a href="carousel/index.html">Carousel</a></li>
         <li><a href="sound-board/index.html">Sound Board</a></li>
-        <li><a href="#"></a></li>
+        <li><a href="zoom-effect/index.html">Zoom Effect</a></li>
     </ol>
 </body>
 </html>
